# cMachineLearning

chapter01/dlib/: CMakeLists.txt  practice_dlib.cc
chapter01/eigen/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  practice_eigen  practice_eigen.cc
chapter01/shark/: CMakeLists.txt  practice_shark.cc
chapter01/xtensor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  linalg_xtensor  practice_xtensor.cc
dataProcessing/fastCppCsvParser/: CMakeLists.txt  main.cc
dataProcessing/fastCppCsvParserReWriteCSVstrings/: main.cc
dataProcessing/readCSVWithDlib/: CMakeLists.txt  main.cc
dataProcessing/readCSVWithSharkML/: CMakeLists.txt  main.cc
dataProcessing/readRapidJSON/: CMakeLists.txt  data.json  main.cc  paper.h  read-json  review.h  reviewsreader.cpp
solvingLinearRegression/dlib/: CMakeLists.txt  linearRegression_dlib.cc
solvingLinearRegression/eigen/: CMakeLists.txt  linear_regression.cc
solvingLinearRegression/shark/: CMakeLists.txt  linearReg_shark.cc
